--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,3 @@
-body{
-    background-color: #f8f9fa!important;
-}
 .puzzle-slider, .puzzle-slider img  {
     width: 100%;
     max-width: 700px;
@@ -65,6 +62,10 @@ body{
 .navbar{
     background-color: white !important;
 }
+.navbar-brand span {
+    display: flex;
+    align-items: center;
+}
 .logo a {
     margin-left: 20px;
 }
@@ -76,6 +77,22 @@ body{
 .logo  span{
     font-family: 'Roboto Mono', monospace;
     width: 70px;
+}
+body {
+    background-image: url('../images/fond.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.content {
+    width: 70%;
+    margin: auto;
+    margin-bottom: 0!important;
+    background-color: lightgreen;
+    padding: 20px;
+}
+.container .row {
+    margin: 5px;
 }
 .row{
     margin-right: 0px !important;
@@ -114,6 +131,7 @@ body{
     border-radius: 15px;
     margin: 10px;
     margin-right: 100px;
+    width: 150px;
 }
 .buttonconnex a:hover {
     background-color: white !important;
@@ -124,6 +142,7 @@ body{
     font-weight: 600;
     border-radius: 15px;
     margin: 10px;
+    width: 150px;
 }
 .row2{
     font-family: 'Roboto Mono', monospace;    
@@ -168,4 +187,17 @@ body{
     line-height: 60px; 
     text-align: center;
     background-color: #f5f5f5;
+}
+footer {
+    bottom: 0;
+    width: 100%;
+    background-color: #f5f5f5;
+    display: flex!important;
+    flex-direction: column;
+}
+footer > div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 35px;
 }
