--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,16 @@
     margin: 0px;
     margin-right: -15px;
 }
+/* Fixer le footer en bas de la page
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+main{
+    flex: 1;
+    transition: all 1s ease-out;
+}*/
 @media (max-width: 1185px) {
     .row2 img{
         width:95%;
@@ -83,12 +93,15 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    display : table;
+    width : 100%;
 }
+
 .content {
     width: 70%;
     margin: auto;
     margin-bottom: 0!important;
-    background-color: lightgreen;
+    background-color: whitesmoke;
     padding: 20px;
 }
 .container .row {
@@ -192,12 +205,17 @@ footer {
     bottom: 0;
     width: 100%;
     background-color: #f5f5f5;
-    display: flex!important;
+    display:table-row!important;
     flex-direction: column;
+    height: 100px;
 }
 footer > div {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 35px;
+}
+html, body {
+	height: 100%;
+	margin: 0; padding: 0;
 }
