--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 .puzzle-slider, .puzzle-slider img  {
     width: 100%;
     max-width: 300px;
-    max-height: 300px;
-    height: 300px;
+    max-height: 250px;
+    height: 250px;
     float: right;
     margin: 0px;
     margin-right: -15px;
@@ -194,7 +194,7 @@ body {
 footer {
     bottom: 0;
     width: 100%;
-    background-color: #f5f5f5;
+    background-color:white;
     display:table-row!important;
     flex-direction: column;
     height: 100px;
