--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,210 +1,216 @@
 .puzzle-slider, .puzzle-slider img  {
-    width: 100%;
-    max-width: 300px;
-    max-height: 250px;
-    height: 250px;
-    float: right;
-    margin: 0px;
-    margin-right: -15px;
+  width: 100%;
+  max-width: 300px;
+  max-height: 250px;
+  height: 250px;
+  float: right;
+  margin: 0px;
+  margin-right: -15px;
 }
 @media (max-width: 300px) {
-    .row2 img{
-        width:50%;
-        padding-top: 30px !important;
-    }
-    
+  .row2 img{
+    width:50%;
+    padding-top: 30px !important;
+  }
+
 }
 @media (max-width: 300px) {  
-    .puzzle-slider, .puzzle-slider img {
-        width: 50%;
-    }
-    .logo a img{
-        width: 70px;
-    }
-    .titre h2{
-        font-weight: 700;
-        font-size: 40px !important;
-        color: #32323d;
+  .puzzle-slider, .puzzle-slider img {
+    width: 50%;
+  }
+  .logo a img{
+    width: 70px;
+  }
+  .titre h2{
+    font-weight: 700;
+    font-size: 40px !important;
+    color: #32323d;
 
-    }
-    .titre h4{
-        font-weight: 600;
-        font-size: 15px !important;
-        color: #ef5466;
-    }
-    .titre a{
-        width: 200px !important;
-        font-weight: 600;
-        color: yellow !important;
-    }
+  }
+  .titre h4{
+    font-weight: 600;
+    font-size: 15px !important;
+    color: #ef5466;
+  }
+  .titre a{
+    width: 200px !important;
+    font-weight: 600;
+    color: yellow !important;
+  }
 
 }
 @media (max-width: 300px) {
-    .puzzle-slider, .puzzle-slider img {
-        width: 60%;
-    }
-    .titre h2{
-        font-weight: 700;
-        font-size: 30px !important;
-        color: #32323d;
+  .puzzle-slider, .puzzle-slider img {
+    width: 60%;
+  }
+  .titre h2{
+    font-weight: 700;
+    font-size: 30px !important;
+    color: #32323d;
 
-    }
-    .titre h4{
-        font-weight: 600;
-        font-size: 15px !important;
-        color: #ef5466;
-    }
-    .row2 img{
-        width:90%;
-    }
+  }
+  .titre h4{
+    font-weight: 600;
+    font-size: 15px !important;
+    color: #ef5466;
+  }
+  .row2 img{
+    width:90%;
+  }
 
 }
 .navbar{
-    background-color: white !important;
+  background-color: white !important;
 }
 .navbar-brand span {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .logo a {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 .logo a img{
-    width: 70px;
-    position: relative;
-    margin-top: 0px;
+  width: 70px;
+  position: relative;
+  margin-top: 0px;
 }
 .logo  span{
-    font-family: 'Roboto Mono', monospace;
-    width: 70px;
+  font-family: 'Roboto Mono', monospace;
+  width: 70px;
 }
 body {
-    background-image: url('../images/fond.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    display : table;
-    width : 100%;
+  background-image: url('../images/fond.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  display : table;
+  width : 100%;
 }
 
 .content {
-    width: 70%;
-    margin: auto;
-    margin-bottom: 0!important;
-    background-color: whitesmoke;
-    padding: 20px;
+  width: 70%;
+  margin: auto;
+  margin-bottom: 0!important;
+  background-color: whitesmoke;
+  padding: 20px;
 }
 .container .row {
-    margin: 5px;
+  margin: 5px;
 }
 .row{
-    margin-right: 0px !important;
+  margin-right: 0px !important;
 }
 .titre{
-    padding-left: 45px;
+  padding-left: 45px;
 }
 .titre h2{
-    font-family: 'Roboto Mono', monospace;    
-    font-style: normal;
-    font-weight: 700;
-    font-size: 48px;
-    color: #32323d;
-    margin-top: 120px;
+  font-family: 'Roboto Mono', monospace;    
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  color: #32323d;
+  margin-top: 120px;
 }
 .titre h4{
-    font-family: 'Roboto Mono', monospace;    
-    font-style: thin;
-    font-weight: 600;
-    font-size: 25px;
-    color: #ef5466;
-    margin-top: 20px;
+  font-family: 'Roboto Mono', monospace;    
+  font-style: thin;
+  font-weight: 600;
+  font-size: 25px;
+  color: #ef5466;
+  margin-top: 20px;
 }
 .titre a{
-    margin-top: 20px;
-    width: 250px;
-    font-weight: 600;
-    color: #ef5466 !important;
+  margin-top: 20px;
+  width: 250px;
+  font-weight: 600;
+  color: #ef5466 !important;
 }
 .titre a:hover{
-    color: White !important;
+  color: White !important;
 }
 .buttonconnex a {
-    font-weight: 700;
-    margin-right: 80px;
-    border-radius: 15px;
-    margin: 10px;
-    margin-right: 100px;
-    width: 150px;
+  font-weight: 700;
+  margin-right: 80px;
+  border-radius: 15px;
+  margin: 10px;
+  margin-right: 100px;
+  width: 150px;
 }
 .buttonconnex a:hover {
-    background-color: white !important;
-    color: #278291 !important;
-    border-color: #278291 !important;
+  background-color: white !important;
+  color: #278291 !important;
+  border-color: #278291 !important;
 }
 .buttoninscrip a {
-    font-weight: 600;
-    border-radius: 15px;
-    margin: 10px;
-    width: 150px;
+  font-weight: 600;
+  border-radius: 15px;
+  margin: 10px;
+  width: 150px;
 }
 .row2{
-    font-family: 'Roboto Mono', monospace;    
-    padding: 90px;
-    text-align: left;
-    background-color: white;
-    height: auto;
+  font-family: 'Roboto Mono', monospace;    
+  padding: 90px;
+  text-align: left;
+  background-color: white;
+  height: auto;
 }
 .row2 h2{
-    padding-top: 10px;
-    font-weight: 700;
-    font-size: 34px;
-    color: #32323d;
-    text-align: center;
+  padding-top: 10px;
+  font-weight: 700;
+  font-size: 34px;
+  color: #32323d;
+  text-align: center;
 }
 .row2 h3{
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
-    color: #32323d;
-    text-align: left;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  color: #32323d;
+  text-align: left;
 }
 .row2 p{
-    font-family: 'Roboto', sans-serif; 
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
-    color: #32323d;
-    text-align: left;
+  font-family: 'Roboto', sans-serif; 
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #32323d;
+  text-align: left;
 }
 .row2 .row{
-    margin: 50px;
+  margin: 50px;
 }
 .row2 img{
-    float: left !important;
-    margin: 0px;
+  float: left !important;
+  margin: 0px;
 }
 .footer {
-    bottom: 0;
-    width: 100%;
-    height: 60px; 
-    line-height: 60px; 
-    text-align: center;
-    background-color: #f5f5f5;
+  bottom: 0;
+  width: 100%;
+  height: 60px; 
+  line-height: 60px; 
+  text-align: center;
+  background-color: #f5f5f5;
 }
 footer {
-    bottom: 0;
-    width: 100%;
-    background-color:white;
-    display:table-row!important;
-    flex-direction: column;
+  bottom: 0;
+  width: 100%;
+  background-color:white;
+  display:table-row!important;
+  flex-direction: column;
 }
 footer > div {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 35px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 35px;
 }
 html, body {
 	height: 100%;
 	margin: 0; padding: 0;
 }
+
+.author { font-size: medium!important; margin-left: 50px; }
+.author_story { font-size: medium!important; margin-left: 50px; }
+.cover_story img { border: 1px solid black; }
+.cover_chapter { text-align: center; }
+.cover_chapter img { width: 75%; border: 1px solid black; }
