--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -246,3 +246,21 @@ html, body {
   font-size: 2em;
   margin-right: 8px;
 }
+
+.cover_chapter img { border: 1px solid black; }
+.author_story { font-size: medium!important; margin-left: 50px; }
+.slideshow-container { position: relative; margin: auto; }
+.prev, .next { cursor: pointer; position: absolute; top: 50%; width: auto; padding: 16px; margin-top: -22px; color: white; font-weight: bold; font-size: 18px; transition: 0.6s ease; border-radius: 0 3px 3px 0; user-select: none; }
+.prev:hover, .next:hover { background-color: rgba(0,0,0,0.8); }
+.numbertext { color: gray; font-size: 12px; padding-top: 10px; position: absolute; right: 0; left: 0; margin: auto; width: 300px; text-align: center; }
+.media-left { margin-bottom: 0!important; }
+.dropdown-button, .dropdown-content button { border: 0; }
+.dropdown-menu, .dropdown-content { padding: 0; }
+.media-content p { background-color: white;padding: 10px;border-radius: 15px;margin-bottom: 5px;margin-top: 5px; }
+
+.flex-center
+    {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
